WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256668
Unreviewed, debug-only, check m_parseErrorMessage too in JSON parsing
https://bugs.webkit.org/show_bug.cgi?id=256668
Summary
Unreviewed, debug-only, check m_parseErrorMessage too in JSON parsing
Yusuke Suzuki
Reported
2023-05-11 15:16:16 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-05-11 15:16:40 PDT
<
rdar://problem/109230737
>
Yusuke Suzuki
Comment 2
2023-05-11 15:17:20 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13775
EWS
Comment 3
2023-05-11 16:40:32 PDT
Committed
263988@main
(63392c269f70): <
https://commits.webkit.org/263988@main
> Reviewed commits have been landed. Closing PR #13775 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug