Unreviewed, debug-only, check m_parseErrorMessage too in JSON parsing https://bugs.webkit.org/show_bug.cgi?id=256668 rdar://109230737

* JSTests/stress/json-parse-recursive-error-check-in-debug.js: Added.
(shouldThrow):
* Source/JavaScriptCore/runtime/LiteralParser.cpp:
(JSC::LiteralParser<CharType>::parseRecursively):

Canonical link: https://commits.webkit.org/263988@main